<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/text_view_height"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/email"/>
        <EditText
                android:layout_width="@dimen/login_input_text_width"
                android:layout_height="fill_parent"
                android:id="@+id/editText_email"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/text_view_height"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:text="@string/password"/>
        <EditText
                android:layout_width="@dimen/login_input_text_width"
                android:layout_height="fill_parent"
                android:id="@+id/editText_password"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/text_view_height"
                  android:orientation="horizontal">
        <Button android:layout_width="@dimen/login_button_width"
                android:layout_height="@dimen/text_view_height"
                android:text="@string/login"
                android:id="@+id/button_login"/>
        <Button android:layout_width="@dimen/login_button_width"
                android:layout_height="@dimen/text_view_height"
                android:text="@string/register"
                android:id="@+id/button_register"/>
    </LinearLayout>
    <Button android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/text_view_height"
            android:text="@string/forget_pwd"
            android:id="@+id/button_forget_password"/>
    <Button android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/text_view_height"
            android:text="@string/weibo_login"
            android:id="@+id/weibo_login"/>
    <Button android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/text_view_height"
            android:text="@string/qq_login"
            android:id="@+id/qq_login"/>

    <RelativeLayout
            android:id="@+id/login_indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26.66dp"
            android:layout_marginTop="26.66dp"
            android:clickable="false"
            android:paddingBottom="6.66dp"
            android:paddingTop="6.66dp"
            android:visibility="gone" >

        <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="@dimen/actionbar_height"
                android:layout_height="@dimen/actionbar_height"
                android:duplicateParentState="true"
                android:padding="9dp" />

        <TextView
                android:id="@+id/txt_logging_in"
                style="@style/FontText.LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13.33dp"
                android:layout_toRightOf="@+id/progressbar"
                android:duplicateParentState="true"
                android:text="@string/logging_in_" />
    </RelativeLayout>
</LinearLayout>