<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/button_take_photo"
                android:layout_width="@dimen/common_button_width"
                android:layout_height="@dimen/common_button_height"
                android:text="@string/take_photo"/>

        <Button
                android:id="@+id/button_log_db"
                android:layout_width="@dimen/common_button_width"
                android:layout_height="@dimen/common_button_height"
                android:text="@string/log_db"/>
        <Button
                android:id="@+id/button_login"
                android:layout_width="@dimen/common_button_width"
                android:layout_height="@dimen/common_button_height"
                android:text="@string/login"/>
        <Button
                android:id="@+id/button_manage_photos"
                android:layout_width="@dimen/common_button_width"
                android:layout_height="@dimen/common_button_height"
                android:text="@string/manage_photos"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_location"
            android:text="Hello World, MainActivity"
            />

    <com.amap.api.maps2d.MapView
            android:id="@+id/map_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

</LinearLayout>

